1.0.1:
	- When opening library, clear bibdata in between docs (Rodrigo Kassick)
	- Make SaveLibrary insensitive when library not dirty
	- Switch to autotools (Eric Lesh)
	- Open properties on double click as last resort
	- Import stuff:
		- Fix getting type wrong for PhdThesis
		- Fix bibtex import getting confused about certain accents (Chris Putnam)
		- Fix import dialog ignoring choice of file format
		- Fix chapter fields in incollection items in bibtex import
		- Understand translator fields in import
		- Don't extra fields for import fields with no value string
		- Import from MODS
		- Hide non-functional "auto-detect" option in import dialog

1.0.0: Initial release