@@ -7,6 +7,7 @@
 class Document {
 	private:
 	Glib::ustring filename_;
+	Glib::ustring relfilename_;
 	Glib::ustring key_;
 	std::vector<int> tagUids_;
 	Glib::RefPtr<Gdk::Pixbuf> thumbnail_;
@@ -20,12 +21,17 @@ class Document {
 	Document (Glib::ustring const &filename);
 	Document (
 		Glib::ustring const &filename,
+		Glib::ustring const &relfilename,
 		Glib::ustring const &key,
 		std::vector<int> const &tagUids,
 		BibData const &bib);
 	Glib::ustring& getKey();
 	Glib::ustring& getFileName();
+	// RelFileName is NOT kept up to date in general, it's
+	// used during loading and saving only
+	Glib::ustring& getRelFileName();
 	void setFileName (Glib::ustring const &filename);
+	void updateRelFileName (Glib::ustring const &libfilename);
 	void setKey (Glib::ustring const &key);
 	Glib::RefPtr<Gdk::Pixbuf> getThumbnail () {return thumbnail_;}
 	std::vector<int>& getTags ();
